fix: flickering issue on rota page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -304,7 +304,7 @@ svg line {
 }
 
 .slide-up {
-  animation: slide-up 1s;
+  animation: slide-up 1s forwards;
   /* transition: transform 0.5s ease-out; */
   transform: translateY(100%);
 }
@@ -332,7 +332,7 @@ svg line {
 }
 
 .slide-in-right {
-  animation: slide-in-right 1s backwards;
+  animation: slide-in-right 1s forwards;
   transform: translateX(-100%);
 }
 @keyframes slide-in-right {
@@ -356,14 +356,6 @@ svg line {
     opacity: 0;
   }
 }
-
-/* .slide-in-left {
-    transform: translateX(-100%);
-}
-
-.slide-in-right {
-    transform: translateX(100%);
-} */
 
 .registerH2 {
   margin-bottom: 0;
